# ncms-lambda-rs

./: .env.example  .gitignore  Cargo.toml  README.md  lambda-request.sample.json  package.json  serverless.yaml
migrations/2021-12-12-162238_create_user/: up.sql
migrations/2021-12-12-162239_create_status/: down.sql  up.sql
migrations/2021-12-12-162739_create_post/: up.sql
migrations/2021-12-12-162740_create_post_status/: down.sql  up.sql
migrations/2021-12-12-164440_create_category/: up.sql
migrations/2021-12-12-164504_create_post_category/: down.sql  up.sql
migrations/2021-12-12-164511_create_post_comment/: down.sql  up.sql
migrations/2021-12-12-164841_create_kind/: down.sql  up.sql
migrations/2021-12-12-164842_create_post_score_kind/: down.sql
migrations/2021-12-12-164843_create_post_score/: down.sql  up.sql
migrations/2021-12-12-165151_create_post_kind/: down.sql  up.sql
migrations/2021-12-12-165201_create_post_user/: down.sql  up.sql
migrations/2022-02-12-173047_create_category/: up.sql
migrations/2022-02-12-173101_create_status/: down.sql  up.sql
migrations/2022-02-12-173106_create_create_user/: up.sql
migrations/2022-02-12-173106_create_user/: up.sql
migrations/2022-02-12-173112_create_session/: down.sql  up.sql
migrations/2022-02-12-173120_create_create_post/: up.sql
migrations/2022-02-12-173126_create_post_category/: down.sql  up.sql
migrations/2022-02-12-173131_create_post_comment/: down.sql  up.sql
src/: main.rs  schema.rs
src/constants/: google_authenticator.rs  mod.rs  status.rs
src/errors/: mod.rs  validation.rs
(+27 files in other folders)
